attempted bug fix: center alignment of birdhouse elements. Unsuccessful, still needs to be fixed

--- a/style.css
+++ b/style.css
@@ -20,19 +20,52 @@
 /* Bird House */
 .bird-house-wrapper {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
     margin-bottom: 40px;
+    position: relative;
+}
+
+/* Roof angled sides (upside down V) */
+.roof-sides {
+    position: absolute;
+    height: 60px;
+    width: 200px;
+    top: 0px;
+}
+
+.roof-left {
+    left: 50%;
+    transform: rotate(57deg);
+    transform-origin: top left;
+    position: absolute;
+    top: 0;
+    width: 10px;
+    height: 120px;
+    background-color: #cc7a5a;
+    z-index: 2;
+}
+
+.roof-right {
+    right: 50%;
+    transform: rotate(-57deg);
+    transform-origin: top right;
+    position: absolute;
+    top: 0;
+    width: 10px;
+    height: 120px;
+    background-color: #cc7a5a;
+    z-index: 2;
 }
 
 .roof {
     width: 0;
     height: 0;
-    border-left: 90px solid transparent;
-    border-right: 90px solid transparent;
-    border-bottom: 60px solid #cc7a5a; /* roof color */
+    border-left: 84px solid transparent;
+    border-right: 84px solid transparent;
+    border-bottom: 60px solid #dfe279; /* roof color */
+    margin: -1px;
 }
 
 .house {
@@ -40,8 +73,9 @@
     height: 200px;
     background-color: #dfe279; /* light green/yellow */
     position: relative;
-    border-left: 4px solid #b4b84f; /* vertical slats effect */
-    border-right: 4px solid #b4b84f;
+    border: 4px solid #b4b84f;
+    margin: 0 auto;
+    box-sizing: border-box;
 }
 
 .line {
@@ -56,7 +90,7 @@
     width: 40px;
     height: 40px;
     background-color: #a54d35;
-    border: 6px solid #ffe7d8;
+    border: 6px solid white;
     border-radius: 50%;
     position: absolute;
     top: 40px;
@@ -65,11 +99,11 @@
 }
 
 .perch {
-    width: 50px;
-    height: 10px;
-    background-color: #ffe7d8;
+    width: 70px;
+    height: 8px;
+    background-color: white;
     position: absolute;
-    top: 90px;
+    top: 100px;
     left: 50%;
     transform: translateX(-50%);
 }
